--- a/ch20-02-multithreaded.html
+++ b/ch20-02-multithreaded.html
@@ -428,7 +428,7 @@ impl ThreadPool {
 <span class="boring">
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
-<p>我們選擇 <code>usize</code> 作爲參數 <code>size</code> 的型別，因爲我們知道負數對執行緒數量來說沒有任何意義。我們也知道 4 會作爲執行緒集合的元素數量，這正是使用 <code>usize</code> 型別的原因，如同第三章<a href="ch03-02-data-types.html#%E6%95%B4%E6%95%B8%E5%9E%8B%E5%88%A5">「整數型別」</a><!-- ignore -->段落所講的。</p>
+<p>我們選擇 <code>usize</code> 作爲參數 <code>size</code> 的型別，因爲我們知道負數對執行緒數量來說沒有任何意義。我們也知道 4 會作爲執行緒集合的元素個數，這正是使用 <code>usize</code> 型別的原因，如同第三章<a href="ch03-02-data-types.html#%E6%95%B4%E6%95%B8%E5%9E%8B%E5%88%A5">「整數型別」</a><!-- ignore -->段落所講的。</p>
 <p>讓我們在檢查程式碼一次：</p>
 <pre><code class="language-console">$ cargo check
     Checking hello v0.1.0 (file:///projects/hello)
