--- a/ch03-02-data-types.html
+++ b/ch03-02-data-types.html
@@ -327,7 +327,7 @@ To learn more, run the command again with --verbose.
               &quot;八月&quot;, &quot;九月&quot;, &quot;十月&quot;, &quot;十一月&quot;, &quot;十二月&quot;];
 <span class="boring">}
 </span></code></pre></pre>
-<p>要詮釋陣列型別的話，你可以在中括號寫出型別和元素數量，並用分號區隔開來，如以下所示：</p>
+<p>要詮釋陣列型別的話，你可以在中括號寫出型別和元素個數，並用分號區隔開來，如以下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -335,7 +335,7 @@ To learn more, run the command again with --verbose.
 <span class="boring">}
 </span></code></pre></pre>
 <p><code>i32</code> 在此是每個元素的型別，在分號後面的數字 <code>5</code> 指的是此陣列有五個元素。</p>
-<p>這種寫法和初始化陣列數值的另一種寫法很像：如果你想建立的陣列中每個元素數值都一樣的話，你可以指定一個數值後加上分號，最後寫出元素數量。如以下所示：</p>
+<p>這種寫法和初始化陣列數值的另一種寫法很像：如果你想建立的陣列中每個元素數值都一樣的話，你可以指定一個數值後加上分號，最後寫出元素個數。如以下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
